tests/errors/syn_cases14.java
public class syn_cases14 {
public static void main(String[] args){
switch(args.length){
default return 32;
}
}
}